# ask-peraturan-ojk

./: README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  render.yaml
.github/workflows/: cd.yml  ci.yml
backend/: .env.example  .gitignore  Dockerfile  answer_test_case.py  config.yaml  context.py  create_test_case.py  evaluate_rag.py  graph_agent.py  ingest.py  main.py  pyproject.toml  ragas_results.csv  setup_agent.py  test_cases.json  testing_model.py  utils.py
backend/chroma/7d844307-ba91-4544-97af-e3523ae6e542/: index_metadata.pickle
backend/evaluate_agent/: answer_test_case.py  evaluate_rag.py  ragas_results.csv
backend/tests/: test_api.py
frontend/: Dockerfile  package-lock.json
frontend/app/: page.tsx
frontend/app/chat/: page.tsx
frontend/components/: MessageBubble.tsx  QueryInput.tsx  SourceCard.tsx
frontend/lib/: api.ts
